# interserver-api-samples

./: .gitignore  README.md  composer.json
OPENAPI-REST-API/openapi-client/c/: CMakeLists.txt  README.md
OPENAPI-REST-API/openapi-client/c/.openapi-generator/: FILES
OPENAPI-REST-API/openapi-client/c/api/: AccountAPI.c  AccountAPI.h  BackupsAPI.c  BackupsAPI.h  BillingAPI.c  BillingAPI.h  DNSAPI.c  DNSAPI.h  DomainsAPI.c  DomainsAPI.h  FloatingIPsAPI.c  FloatingIPsAPI.h  LicensesAPI.c  LicensesAPI.h  MailAPI.c  MailAPI.h  PublicAPI.c  PublicAPI.h  QuickServersAPI.c  QuickServersAPI.h  SSLCertificatesAPI.c  SSLCertificatesAPI.h  ScrubIpsAPI.c  ScrubIpsAPI.h  ServersAPI.c  ServersAPI.h  TicketsAPI.c  TicketsAPI.h  VPSAPI.c  VPSAPI.h  WebhostingAPI.c  WebhostingAPI.h
OPENAPI-REST-API/openapi-client/c/docs/: AccountAPI.md  BackupsAPI.md  BillingAPI.md  DNSAPI.md  DomainsAPI.md  FloatingIPsAPI.md  LicensesAPI.md  MailAPI.md  PublicAPI.md  QuickServersAPI.md  SSLCertificatesAPI.md  ScrubIpsAPI.md  ServersAPI.md  TicketsAPI.md  VPSAPI.md  WebhostingAPI.md  account_features.md  account_info.md  account_info_country_currencies.md  account_info_data.md  account_info_data_cc.md  account_info_data_ccs.md  account_info_data_email_settings.md  account_info_data_extra.md  account_info_data_fraudrecord.md  account_info_limits.md  account_info_limits_inner.md  account_info_max_mind_response.md  account_info_max_mind_response_risk_score.md  account_info_oauth_config.md  account_info_oauth_config_providers.md  account_info_oauth_config_providers_value.md  account_info_oauthproviders.md  account_info_post.md  account_ssh_key.md  add_server_200_response.md  affiliate_banner_row.md  affiliate_dock_setup.md  affiliate_payment_setup.md  affiliate_traffic_row.md  (+428 more)
OPENAPI-REST-API/openapi-client/c/include/: apiClient.h
OPENAPI-REST-API/openapi-client/c/model/: account_features.c  account_features.h  account_info.c  account_info.h  account_info_country_currencies.c  account_info_country_currencies.h  account_info_data.c  account_info_data.h  account_info_data_cc.c  account_info_data_cc.h  account_info_data_ccs.c  account_info_data_ccs.h  account_info_data_email_settings.c  account_info_data_email_settings.h  account_info_data_extra.c  account_info_data_extra.h  account_info_data_fraudrecord.c  account_info_data_fraudrecord.h  account_info_limits.c  account_info_limits.h  account_info_limits_inner.c  account_info_limits_inner.h  account_info_max_mind_response.c  account_info_max_mind_response.h  account_info_max_mind_response_risk_score.c  account_info_max_mind_response_risk_score.h  account_info_oauth_config.c  account_info_oauth_config.h  account_info_oauth_config_providers.c  account_info_oauth_config_providers.h  account_info_oauth_config_providers_value.c  account_info_oauth_config_providers_value.h  account_info_oauthproviders.c  account_info_oauthproviders.h  account_info_post.c  account_info_post.h  account_ssh_key.c  account_ssh_key.h  add_server_200_response.c  add_server_200_response.h  (+864 more)
OPENAPI-REST-API/openapi-client/c/src/: apiClient.c
OPENAPI-REST-API/openapi-client/c/unit-test/: test_account_features.c  test_account_info.c  test_account_info_country_currencies.c  test_account_info_data.c  test_account_info_data_cc.c  test_account_info_data_ccs.c  test_account_info_data_email_settings.c  test_account_info_data_extra.c  test_account_info_data_fraudrecord.c  test_account_info_limits.c  test_account_info_limits_inner.c  test_account_info_max_mind_response.c  test_account_info_max_mind_response_risk_score.c  test_account_info_oauth_config.c  test_account_info_oauth_config_providers.c  test_account_info_oauth_config_providers_value.c  test_account_info_oauthproviders.c  test_account_info_post.c  test_account_ssh_key.c  test_add_server_200_response.c  test_affiliate_banner_row.c  test_affiliate_dock_setup.c  test_affiliate_payment_setup.c  test_affiliate_traffic_row.c  test_asset_server.c  test_asset_server_cpu_inner.c  test_backup.c  test_backup_billing_details.c  test_backup_client_link.c  test_backup_extra_info_tables.c  test_backup_ip_info.c  test_backup_ip_info_row.c  test_backup_login_response.c  test_backup_order_post_response.c  test_backup_order_post_response_cj_params.c  test_backup_order_put_request.c  test_backup_order_put_response.c  test_backup_row.c  test_backup_service_info.c  test_backup_service_master.c  (+411 more)
OPENAPI-REST-API/openapi-client/cpp-qt-client/client/: CMakeLists.txt  OAIAccountApi.cpp  OAIAccountApi.h  OAIAccountFeatures.cpp  OAIAccountFeatures.h  OAIAccountInfo.cpp  OAIAccountInfo.h  OAIAccountInfoCountryCurrencies.cpp  OAIAccountInfoCountryCurrencies.h  OAIAccountInfoData.cpp  OAIAccountInfoData.h  OAIAccountInfoDataCc.cpp  OAIAccountInfoDataCc.h  OAIAccountInfoDataCcs.cpp  OAIAccountInfoDataCcs.h  OAIAccountInfoData_email_settings.cpp  OAIAccountInfoData_email_settings.h  OAIAccountInfoData_extra.cpp  OAIAccountInfoData_extra.h  OAIAccountInfoData_fraudrecord.cpp  OAIAccountInfoData_fraudrecord.h  OAIAccountInfoLimits.cpp  OAIAccountInfoLimits.h  OAIAccountInfoLimits_inner.cpp  OAIAccountInfoLimits_inner.h  OAIAccountInfoMaxMindResponse.cpp  OAIAccountInfoMaxMindResponse.h  OAIAccountInfoMaxMindResponse_riskScore.cpp  OAIAccountInfoMaxMindResponse_riskScore.h  OAIAccountInfoOauthConfig.cpp  OAIAccountInfoOauthConfig.h  OAIAccountInfoOauthConfigProviders.cpp  OAIAccountInfoOauthConfigProviders.h  OAIAccountInfoOauthConfigProviders_value.cpp  OAIAccountInfoOauthConfigProviders_value.h  OAIAccountInfoPost.cpp  OAIAccountInfoPost.h  OAIAccountInfo_oauthproviders.cpp  OAIAccountInfo_oauthproviders.h  OAIAccountSshKey.cpp  (+916 more)
data/: categories.json  functions.json
perl/: api_add_dns_record.pl  api_api_auto_directadmin_login.pl  api_api_buy_mail.pl  api_delete_dns_record.pl  api_floating_ips_cancel_service.pl  api_floating_ips_get_client_unpaid_invoices.pl  api_mail_get_service.pl  api_mail_get_services.pl  api_send_mail.pl  api_vps_queue_backup.pl  api_webhosting_get_client_unpaid_invoices.pl
php/: api_add_dns_domain.php  api_add_dns_record.php  api_add_prepay.php  (+99 more)
(+64197 files in other folders)
